deploy/deployment/openshift/objects/che-operator.Deployment.yaml
#
# Copyright (c) 2019-2026 Red Hat, Inc.
# This program and the accompanying materials are made
# available under the terms of the Eclipse Public License 2.0
# which is available at https://www.eclipse.org/legal/epl-2.0/
#
# SPDX-License-Identifier: EPL-2.0
#
# Contributors:
#   Red Hat, Inc. - initial API and implementation
#

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: che-operator
    app.kubernetes.io/component: che-operator
    app.kubernetes.io/instance: che
    app.kubernetes.io/name: che
    app.kubernetes.io/part-of: che.eclipse.org
  name: che-operator
  namespace: eclipse-che
spec:
  replicas: 1
  selector:
    matchLabels:
      app: che-operator
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: che-operator
        app.kubernetes.io/component: che-operator
        app.kubernetes.io/instance: che
        app.kubernetes.io/name: che
        app.kubernetes.io/part-of: che.eclipse.org
    spec:
      containers:
      - args:
        - --leader-elect
        command:
        - /manager
        image: quay.io/eclipse/che-operator:next
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /healthz
            port: 6789
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: che-operator
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        - containerPort: 60000
          name: metrics
        readinessProbe:
          failureThreshold: 10
          httpGet:
            path: /readyz
            port: 6789
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 500m
            memory: 2Gi
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: false
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: webhook-tls-certs
          readOnly: true
      hostIPC: false
      hostNetwork: false
      hostPID: false
      restartPolicy: Always
      serviceAccountName: che-operator
      terminationGracePeriodSeconds: 20
      volumes:
      - name: webhook-tls-certs
        secret:
          defaultMode: 420
          secretName: che-operator-service-cert
