deploy/deployment/openshift/objects/org.eclipse.che.ValidatingWebhookConfiguration.yaml
#
# Copyright (c) 2019-2026 Red Hat, Inc.
# This program and the accompanying materials are made
# available under the terms of the Eclipse Public License 2.0
# which is available at https://www.eclipse.org/legal/epl-2.0/
#
# SPDX-License-Identifier: EPL-2.0
#
# Contributors:
#   Red Hat, Inc. - initial API and implementation
#

apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    service.beta.openshift.io/inject-cabundle: "true"
  labels:
    app.kubernetes.io/component: che-operator
    app.kubernetes.io/instance: che
    app.kubernetes.io/name: che
    app.kubernetes.io/part-of: che.eclipse.org
  name: org.eclipse.che
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: che-operator-service
      namespace: eclipse-che
      path: /validate-org-eclipse-che-v2-checluster
  failurePolicy: Fail
  name: vchecluster.kb.io
  rules:
  - apiGroups:
    - org.eclipse.che
    apiVersions:
    - v2
    operations:
    - CREATE
    - UPDATE
    resources:
    - checlusters
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: che-operator-service
      namespace: eclipse-che
      path: /validate-advanced-authorization
  failurePolicy: Fail
  name: vauthorization.kb.io
  objectSelector:
    matchLabels:
      app.kubernetes.io/component: advanced-authorization
      app.kubernetes.io/part-of: che.eclipse.org
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - configmaps
  sideEffects: None
